--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,31 @@
-<!doctype html>
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+   
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.0/css/bulma.min.css">
+    
+  </head>
+  <body>
+  <section class="section">
+    <div class="container">
+      <h1 class="title">
+          GRACE HOPPER 
+      </h1>
+    </div>
+   <div id="main"></div>
+    <script async defer src="/bundle.js"></script>  
+  </section>
+    
+  </body>
+</html>
+
+
+
+<!-- <!doctype html>
 <html>
   <head>
   </head>
@@ -6,4 +33,4 @@
     <div id="main"></div>
     <script async defer src="/bundle.js"></script>    
   </body>
-</html> 
+</html>  -->
