--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <section class="section">
     <div class="container">
       <h1 class="title">
-          GRACE HOPPER 
+         Margaret Hamilton Interplanetary Academy of JavaScript
       </h1>
     </div>
    <div id="main"></div>
